# libinge

./: .cdtproject  .project  AUTHORS  Doxyfile  InGE.cbp  Makefile.in  README  autoclean.sh  autogen.sh  configure  configure.in  cp-header.sh  envs.sh  inge.kdevelop  makedeb.sh
debian/: changelog  control  copyright  libinge-dev.install  rules
src/: InGE.h  Makefile.am  inge.pc.in  install-header
src/AI/: Makefile.am
src/AI/FSM/: FSMMachine.cpp  FSMMachine.h  FSMState.h  Makefile.am
src/AI/FuSM/: FuSMMachine.cpp  FuSMMachine.h  FuSMState.h  Makefile.am
src/Audio/: AudioBuffer.cpp  AudioBuffer.h  AudioInputStream.h  AudioListener.cpp  AudioListener.h  AudioManager.cpp  AudioManager.h  AudioSource.cpp  AudioSource.h  Makefile.am
src/Common/: EngineLoader.cpp  EngineLoader.h  Makefile.am  Player.cpp  Player.h  SceneManager.cpp  SceneManager.h  SetupManager.cpp  SetupManager.h
src/Control/: ControlLayer.cpp  ControlLayer.h  IControl.h  IControlLayerListener.h  IKeyListener.h  KeyboardControl.cpp  KeyboardControl.h  Makefile.am  MouseControl.cpp  MouseControl.h  controlEnum.h
src/Entities/: Avatar.cpp  Avatar.h  EntityFactory.cpp  EntityFactory.h  IEntity.cpp  IEntity.h  InfoEntity.cpp  InfoEntity.h  Makefile.am  Object3D.cpp  Object3D.h
src/Graphics/: Graphics.h  Makefile.am  Makefile.in
src/Graphics/Base/: Makefile.am  MaterialInfo.cpp  MaterialInfo.h  Mesh.h  TextureArray.cpp  TextureArray.h  Vertex.cpp  Vertex.h  VolumeInfo.cpp  VolumeInfo.h
src/Graphics/Base/MeshDecorator/: AlphaBlend.cpp  AlphaBlend.h  Bezier.cpp  Bezier.h  ConcreteMesh.cpp  ConcreteMesh.h  DecoratorList.h  Lightmap.cpp  Lightmap.h  Makefile.am  Mask.cpp  Mask.h  MeshDecorator.cpp  MeshDecorator.h  MovieTex.cpp  MovieTex.h  MultiTexture.cpp  MultiTexture.h  RollTexture.cpp  RollTexture.h
src/Graphics/Camera/: CameraFP.cpp  CameraFP.h  CameraSpline.cpp  CameraSpline.h  CameraTP.cpp  CameraTP.h  ICamera.cpp  ICamera.h  Makefile.am
src/Graphics/FX/: Fog.cpp  Fog.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Makefile.am  Particles.cpp  Particles.h  VolumeShadowManager.cpp  VolumeShadowManager.h  Water.cpp  Water.h
src/Graphics/Model/: IModel.h  Makefile.am  Makefile.in
src/Graphics/Model/KFModel/: BoundVolume.cpp  BoundVolume.h  CurrentAnimInfo.cpp  CurrentAnimInfo.h  Face.cpp  Face.h  IKFModel.h  KFModelFactory.cpp  KFModelFactory.h  KeyFrame.cpp  KeyFrame.h  Makefile.am  Makefile.in
src/Graphics/Model/KFModel/Md2/: Makefile.am  Makefile.in  Md2model.cpp  Md2model.h  md2Format.h
src/Graphics/Model/KFModel/Md3/: Makefile.am  Md3Model.cpp  Md3Model.h  Tag.cpp  Tag.h  md3Format.h
src/Graphics/Model/Primitive/: Box.cpp  Box.h  Makefile.am  Plane.cpp  Plane.h  PrimitiveEnum.h  PrimitiveFactory.cpp  PrimitiveFactory.h
src/Graphics/Render/: Drawer.cpp  Drawer.h  DrawerOpenGL.cpp  DrawerOpenGL.h  Frustum.cpp  Frustum.h  IRenderListener.h  Makefile.am  RenderManager.cpp  RenderManager.h  enumDrawer.h
src/Graphics/Toolkit/: Button.cpp  Button.h  IButtonCommand.h  IWidget.cpp  IWidget.h  Label.cpp  Label.h  Makefile.am  TextureDecorator.cpp  TextureDecorator.h  ToolkitManager.cpp  ToolkitManager.h  Window.cpp  Window.h
src/Graphics/World/: BspScene.cpp  BspScene.h  IScene.h  Makefile.am
src/Graphics/World/Heightmap/: HeightmapBase.cpp  HeightmapBase.h  HeightmapBruteForce.cpp  HeightmapBruteForce.h  Makefile.am
src/Graphics/World/Q3Bsp/: Makefile.am  QEntity.cpp  QEntity.h  QEntityParser.cpp  QEntityParser.h  QShader.cpp  QShader.h  QShaderManager.cpp  QShaderManager.h  bspFormat.h
src/Math/: Makefile.am  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Spline.cpp  Spline.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/Network/: Makefile.am  NetClient.cpp  NetClient.h  NetControl.cpp  NetControl.h  NetCustomMessage.cpp  NetCustomMessage.h  NetServer.cpp  NetServer.h
src/Physics/: BrushCollisionListener.h  Makefile.am  PhysicalBody.cpp  PhysicalBody.h  PhysicalContactPoint.cpp  PhysicalContactPoint.h  PhysicalGeom.cpp  PhysicalGeom.h  PhysicalJoint.cpp  PhysicalJoint.h  PhysicalJointGroup.cpp  PhysicalJointGroup.h  PhysicalMass.h  PhysicalSpace.cpp  PhysicalSpace.h  PhysicalWorld.cpp  PhysicalWorld.h  PhysicsManager.cpp  PhysicsManager.h
src/Physics/Geoms/: GeomBox.cpp  GeomBox.h  GeomCylinder.cpp  GeomCylinder.h  GeomPlane.cpp  GeomPlane.h  GeomRay.cpp  GeomRay.h  GeomSphere.cpp  GeomSphere.h  GeomTriMesh.cpp  GeomTriMesh.h  Makefile.am
src/Physics/Joints/: JointAMotor.cpp  JointAMotor.h  JointBall.cpp  JointBall.h  JointContact.cpp  JointContact.h  JointFixed.cpp  JointFixed.h  JointHinge.cpp  JointHinge.h  JointHinge2.cpp  JointHinge2.h  JointSlider.cpp  JointSlider.h  JointUniversal.cpp  JointUniversal.h  Makefile.am
src/Tools/: Importer.cpp  Importer.h  Makefile.am
src/Tools/COLLADA_DOM/: Makefile.am
src/Tools/COLLADA_DOM/dae/: Makefile.am  dae.cpp  daeAtomicType.cpp  daeErrorHandler.cpp  daeIDRef.cpp
src/Tools/COLLADA_DOM/dom/: Makefile.am
src/Tools/COLLADA_DOM/modules/: Makefile.am  modules.h
src/Tools/COLLADA_DOM/modules/STLDatabase/: Makefile.am  daeSTLDatabase.cpp
src/Tools/COLLADA_DOM/modules/XMLPlugin/: Makefile.am  daeLIBXMLPlugin.cpp  daeLIBXMLResolver.cpp
src/Tools/COLLADA_DOM/modules/stdErrPlugin/: Makefile.am  stdErrPlugin.cpp
src/Triggers/: ITrigger.cpp  ITrigger.h  Makefile.am  TriggerManager.cpp  TriggerManager.h
src/Util/: BitSet.cpp  BitSet.h  LogManager.cpp  LogManager.h  Makefile.am  MsgTypeEnum.h  QuadNode.cpp  QuadNode.h  QuadTree.cpp  QuadTree.h  SpaceLeaf.cpp  SpaceLeaf.h  SpaceNode.cpp  SpaceNode.h  SpaceTree.cpp  SpaceTree.h
src/Util/TinyXML/: Makefile.am
templates/: cpp  h
