dnl This lines initializes autoconf. "file" is the filename of some source file
dnl from your project:
AC_INIT(configure.in, 0.1.0)
dnl This line initializes automake. "package" is the package name, like acb2xyz,
dnl or something else. "version" is a version number, like 0.1.0
AM_INIT_AUTOMAKE(inge, 0.1.0)

dnl This line tells automake and autoconf to use config.h as the target
dnl configuration file, which will contain #define's for resources that are found
dnl in the compilation host by the generated configure
AM_CONFIG_HEADER(config.h)
AC_CONFIG_HEADERS

dnl This line tells autoconf to look for a working C compiler (CC).
AC_PROG_CXX
#AC_PROG_RANLIB
AC_PROG_LIBTOOL

AC_CHECK_PROGS(PKGCONFIG,pkg-config)

AC_CHECK_LIB(SDL_net, SDLNet_Write32, , AC_MSG_ERROR([
*** Unable to find SDL_net library (libSDL_net). Please install it in order to complete the compilation
]))

AC_CHECK_LIB(SDL_image, IMG_Load, , AC_MSG_ERROR([
*** Unable to find SDL_image library (libSDL_image). Please install it in order to complete the compilation
]))

AC_CHECK_LIB(ode, dMassAdjust, , AC_MSG_ERROR([
*** Unable to find ODE library (libode). Please install it in order to complete the compilation
]))

AC_CHECK_LIB(openal, alSource3f, , AC_MSG_ERROR([
*** Unable to find OpenAL library (libopenal). Please install it in order to complete the compilation
]))

AC_CHECK_LIB(ogg, ogg_stream_init, , AC_MSG_ERROR([
*** Unable to find Ogg library (libogg). Please install it in order to complete the compilation
]))

AC_CHECK_LIB(vorbisfile, ov_open, , AC_MSG_ERROR([
*** Unable to find Ogg Vorbis library (libvorbisfile). Please install it in order to complete the compilation
]))

AC_CHECK_LIB(smpeg, SMPEG_new, , AC_MSG_ERROR([
*** Unable to find SDL MPEG Player (libsmpeg). Please install it in order to complete the compilation
]))

AC_CHECK_LIB(alut, alutLoadMemoryFromFile, , AC_MSG_ERROR([
*** Unable to find ALUT library (libalut). Please install it in order to complete the compilation
]))

AC_CHECK_LIB(caca, caca_create_display, , AC_MSG_ERROR([
*** Unable to find caca library (libcaca). Please install it in order to complete the compilation
]))

CXXFLAGS="$CXXFLAGS $($PKGCONFIG --cflags sdl)"

dnl This line tell autoconf to look for a working install program which is used
dnl by the target Makefile.
AC_PROG_INSTALL

dnl This line tells autoconf and automake to generate a Makefile, based in a file
dnl named Makefile.in (which will be itself generated by automake from Makefile.am),
dnl in the current -- root -- directory and in subdir1 and subdir2 subdirectories:
AC_OUTPUT(
src/Control/Makefile
src/Graphics/Render/Makefile
src/Graphics/Model/KFModel/Md2/Makefile
src/Graphics/Model/KFModel/Md3/Makefile
src/Graphics/Model/KFModel/Makefile
src/Graphics/Model/Primitive/Makefile
src/Graphics/Model/Makefile
src/Graphics/Toolkit/Makefile
src/Graphics/World/Heightmap/Makefile
src/Graphics/World/Q3Bsp/Makefile
src/Graphics/World/Makefile
src/Graphics/Camera/Makefile
src/Graphics/Base/MeshDecorator/Makefile
src/Graphics/Base/Makefile
src/Graphics/FX/Makefile
src/Graphics/Makefile
src/Audio/Makefile
src/Physics/Joints/Makefile
src/Physics/Geoms/Makefile
src/Physics/Makefile
src/Entities/Makefile
src/Triggers/Makefile
src/Common/Makefile
src/AI/FSM/Makefile
src/AI/FuSM/Makefile
src/AI/Makefile
src/Math/Makefile
src/Network/Makefile
src/Util/TinyXML/Makefile
src/Util/Makefile
src/Tools/Makefile
src/Tools/COLLADA_DOM/Makefile
src/Tools/COLLADA_DOM/dom/Makefile
src/Tools/COLLADA_DOM/dae/Makefile
src/Tools/COLLADA_DOM/modules/Makefile
src/Tools/COLLADA_DOM/modules/XMLPlugin/Makefile
src/Tools/COLLADA_DOM/modules/stdErrPlugin/Makefile
src/Tools/COLLADA_DOM/modules/STLDatabase/Makefile
src/Makefile
src/inge.pc
Makefile
)
