INCLUDES = 
METASOURCES = AUTO
noinst_LTLIBRARIES = libJoints.la
libJoints_la_SOURCES = JointAMotor.cpp JointAMotor.h JointBall.cpp JointBall.h\
	JointContact.cpp JointContact.h JointFixed.cpp JointFixed.h\
	JointHinge2.cpp JointHinge2.h JointHinge.cpp JointHinge.h\
	JointSlider.cpp JointSlider.h JointUniversal.cpp JointUniversal.h
