INCLUDES = 
METASOURCES = AUTO
noinst_LTLIBRARIES = libMeshDecorator.la
libMeshDecorator_la_SOURCES = AlphaBlend.cpp AlphaBlend.h ConcreteMesh.cpp \
	ConcreteMesh.h DecoratorList.h Lightmap.cpp Lightmap.h Mask.cpp Mask.h \
	MeshDecorator.cpp MeshDecorator.h MultiTexture.cpp MultiTexture.h RollTexture.cpp \
	RollTexture.h Bezier.cpp Bezier.h MovieTex.cpp
noinst_HEADERS = Bezier.h AlphaBlend.h ConcreteMesh.h DecoratorList.h \
	Lightmap.h Mask.h MeshDecorator.h MultiTexture.h RollTexture.h MovieTex.h
