INCLUDES = 
METASOURCES = AUTO
lib_LTLIBRARIES = libcollada_dae.la
libcollada_dae_la_SOURCES = daeArray.cpp daeAtomicType.cpp dae.cpp\
	daeDocument.cpp daeDom.cpp daeElement.cpp daeError.cpp\
	daeErrorHandler.cpp daeIDRef.cpp daeMemorySystem.cpp daeMetaAny.cpp\
	daeMetaAttribute.cpp daeMetaChoice.cpp daeMetaCMPolicy.cpp\
	daeMetaElementAttribute.cpp daeMetaElement.cpp daeMetaGroup.cpp\
	daeMetaSequence.cpp daeSIDResolver.cpp daeStringRef.cpp\
	daeStringTable.cpp daeURI.cpp domAny.cpp
