INCLUDES = 
METASOURCES = AUTO
lib_LTLIBRARIES = libcollada_dom.la
libcollada_dom_la_SOURCES = domAccessor.cpp domAnimation_clip.cpp\
	domAnimation.cpp domAsset.cpp domBind_material.cpp domBool_array.cpp\
	domBox.cpp domCamera.cpp domCapsule.cpp domCg_connect_param.cpp\
	domCg_newarray_type.cpp domCg_newparam.cpp domCg_param_type.cpp\
	domCg_sampler1D.cpp domCg_sampler2D.cpp domCg_sampler3D.cpp\
	domCg_samplerCUBE.cpp domCg_samplerDEPTH.cpp domCg_samplerRECT.cpp\
	domCg_setarray_type.cpp domCg_setparam.cpp domCg_setparam_simple.cpp\
	domCg_setuser_type.cpp domCg_surface_type.cpp domChannel.cpp\
	domCOLLADA.cpp domCommon_color_or_texture_type.cpp\
	domCommon_float_or_param_type.cpp domCommon_newparam_type.cpp\
	domCommon_transparent_type.cpp domConstants.cpp domController.cpp\
	domConvex_mesh.cpp domCylinder.cpp domEffect.cpp domEllipsoid.cpp\
	domExtra.cpp domFloat_array.cpp domForce_field.cpp\
	domFx_annotate_common.cpp domFx_annotate_type_common.cpp\
	domFx_basic_type_common.cpp domFx_clearcolor_common.cpp\
	domFx_cleardepth_common.cpp domFx_clearstencil_common.cpp\
	domFx_code_profile.cpp domFx_colortarget_common.cpp\
	domFx_depthtarget_common.cpp domFx_include_common.cpp\
	domFx_newparam_common.cpp domFx_profile_abstract.cpp\
	domFx_sampler1D_common.cpp domFx_sampler2D_common.cpp\
	domFx_sampler3D_common.cpp domFx_samplerCUBE_common.cpp\
	domFx_samplerDEPTH_common.cpp domFx_samplerRECT_common.cpp\
	domFx_stenciltarget_common.cpp domFx_surface_common.cpp\
	domFx_surface_format_hint_common.cpp domFx_surface_init_common.cpp\
	domFx_surface_init_cube_common.cpp domFx_surface_init_from_common.cpp\
	domFx_surface_init_planar_common.cpp\
	domFx_surface_init_volume_common.cpp domGeometry.cpp\
	domGles_basic_type_common.cpp domGles_newparam.cpp\
	domGles_pipeline_settings.cpp domGles_sampler_state.cpp\
	domGles_texcombiner_argumentAlpha_type.cpp\
	domGles_texcombiner_argumentRGB_type.cpp\
	domGles_texcombiner_commandAlpha_type.cpp\
	domGles_texcombiner_commandRGB_type.cpp\
	domGles_texcombiner_command_type.cpp domGles_texenv_command_type.cpp\
	domGles_texture_constant_type.cpp domGles_texture_pipeline.cpp\
	domGles_texture_unit.cpp domGl_hook_abstract.cpp\
	domGl_pipeline_settings.cpp domGl_sampler1D.cpp domGl_sampler2D.cpp\
	domGl_sampler3D.cpp domGl_samplerCUBE.cpp domGl_samplerDEPTH.cpp\
	domGl_samplerRECT.cpp domGlsl_newarray_type.cpp domGlsl_newparam.cpp\
	domGlsl_param_type.cpp domGlsl_setarray_type.cpp domGlsl_setparam.cpp\
	domGlsl_setparam_simple.cpp domGlsl_surface_type.cpp domIDREF_array.cpp\
	domImage.cpp domInputGlobal.cpp domInputLocal.cpp\
	domInputLocalOffset.cpp domInstance_camera.cpp\
	domInstance_controller.cpp domInstance_effect.cpp\
	domInstance_force_field.cpp domInstance_geometry.cpp\
	domInstance_light.cpp domInstance_material.cpp domInstance_node.cpp\
	domInstance_physics_material.cpp domInstance_physics_model.cpp\
	domInstance_rigid_body.cpp domInstance_rigid_constraint.cpp\
	domInstanceWithExtra.cpp domInt_array.cpp domLibrary_animation_clips.cpp\
	domLibrary_animations.cpp domLibrary_cameras.cpp\
	domLibrary_controllers.cpp domLibrary_effects.cpp\
	domLibrary_force_fields.cpp domLibrary_geometries.cpp\
	domLibrary_images.cpp domLibrary_lights.cpp domLibrary_materials.cpp\
	domLibrary_nodes.cpp domLibrary_physics_materials.cpp\
	domLibrary_physics_models.cpp domLibrary_physics_scenes.cpp\
	domLibrary_visual_scenes.cpp domLight.cpp domLines.cpp domLinestrips.cpp\
	domLookat.cpp domMaterial.cpp domMatrix.cpp domMesh.cpp domMorph.cpp\
	domName_array.cpp domNode.cpp domParam.cpp domP.cpp\
	domPhysics_material.cpp domPhysics_model.cpp domPhysics_scene.cpp\
	domPlane.cpp domPolygons.cpp domPolylist.cpp domProfile_CG.cpp\
	domProfile_COMMON.cpp domProfile_GLES.cpp domProfile_GLSL.cpp\
	domRigid_body.cpp domRigid_constraint.cpp domRotate.cpp domSampler.cpp\
	domScale.cpp domSkew.cpp domSkin.cpp domSource.cpp domSphere.cpp\
	domSpline.cpp domTapered_capsule.cpp domTapered_cylinder.cpp\
	domTargetableFloat3.cpp domTargetableFloat.cpp domTechnique.cpp\
	domTranslate.cpp domTriangles.cpp domTrifans.cpp domTristrips.cpp\
	domTypes.cpp domVertices.cpp domVisual_scene.cpp
